--- a/index.html
+++ b/index.html
@@ -1,1 +1,66 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="../Proyecto/hamburger/hamburgerJs.js"></script>
+    <link rel="stylesheet" href="../Proyecto/hamburger/hamburgerStyle.css">
+    <link rel="stylesheet" href="../Proyecto/common style/style.css">
+    <title>Home</title>
+</head>
+
+<body>
+    <div class="container">
+        <header>
+            <div class="topnav">
+                <img src="../Proyecto/imageResources/Logo.svg" class="active">
+                <div id="hamburger_div">
+                    <div class="col">
+                        <a class="hamburger_options" onclick="location.href='../Proyecto/loans/enterpriseLoans.html'">Préstamos
+                            para empresas</a>
+                        <a class="hamburger_options" onclick="location.href='../Proyecto/support/serviceChannels.html'">Canales
+                            de servicio</a>
+                        <a class="hamburger_options"
+                            onclick="location.href='../Proyecto/promotions/promotions.html'">Promociones</a>
+                        <a class="hamburger_options" onclick="location.href='../Proyecto/support/contacts.html'">Contactos</a>
+                        <a class="hamburger_options" onclick="location.href='../Proyecto/profile/profile.html'">Perfil</a>
+                        <div class="row">
+                            <button class="pure-material-button-contained" id="log_in_and_support"
+                                onclick="location.href='../Proyecto/signIn/signIn.html'">INICIAR
+                                SESIÓN</button>
+                        </div>
+                        <div class="row">
+                            <button class="pure-material-button-contained" id="log_in_and_support"
+                                onclick="location.href='../Proyecto/support/clientSupport.html'">ATENCIÓN AL
+                                CLIENTE</button>
+                        </div>
+                    </div>
+                </div>
+                <a href="javascript:void(0);" class="icon" onclick="expandHamburger()">
+                    <i class="fa fa-bars"></i>
+                </a>
+            </div>
+        </header>
+        <div class="row">
+            <section id="homeFrontPageHeader">
+                <div class="row">
+                    <img class="fullImage" src="../Proyecto/imageResources/homeHeader.jpg">
+                </div>
+            </section>
+            <h4 class="blueText" id="homeHeader">Le damos la bienvenida</h4>
+            <p class="normal_text">
+                Si aún no posee una cuenta, puede
+                crearla en el siguiente botón
+            </p>
+            <button class="pure-material-button-contained" id="new_account"
+                onclick="location.href='../Proyecto/signUp/signUpStepOne.html'">CREAR CUENTA</button>
+        </div>
+    </div>
+</body>
+
+</html>
