♻️ Update path to client support

--- a/loans/payLoan.html
+++ b/loans/payLoan.html
@@ -36,7 +36,7 @@
                         </div>
                         <div class="row">
                             <button class="pure-material-button-contained" id="log_in_and_support"
-                                onclick="location.href='../support/clientSupport.html'">ATENCIÓN AL
+                                onclick="location.href='../support/contacts.html'">ATENCIÓN AL
                                 CLIENTE</button>
                         </div>
                     </div>
@@ -70,6 +70,6 @@
         <button class="pure-material-button-contained" id="log_in_and_support"
             onclick="location.href='../loans/paymentDone.html'">PAGAR</button>
         <button class="pure-material-button-contained" id="log_in_and_support"
-            onclick="location.href='../support/clientSupport.html'">CÓDIGO QR</button>
+            onclick="location.href='../support/contacts.html'">CÓDIGO QR</button>
     </div>
 </body>
