--- a/signUp/signUpStepTwo.html
+++ b/signUp/signUpStepTwo.html
@@ -39,7 +39,7 @@
                         </div>
                         <div class="row">
                             <button class="pure-material-button-contained" id="log_in_and_support"
-                                onclick="location.href='../support/clientSupport.html'">ATENCIÓN AL
+                                onclick="location.href='../support/contacts.html'">ATENCIÓN AL
                                 CLIENTE</button>
                         </div>
                     </div>
