--- a/signUp/signUpStepOne.html
+++ b/signUp/signUpStepOne.html
@@ -8,12 +8,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
-    <script type="text/javascript" src="../signUp/signUpPhoneNumber.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script type="text/javascript" src="../signUp//signUpStepOne.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Sign Up</title>
 </head>
 
@@ -77,7 +78,7 @@
 
             <div class="row">
                 <button class="pure-material-button-contained" id="continue"
-                    onclick="location.href='../signUp/signUpStepTwo.html'">CONTINUAR</button>
+                    onclick="savePhoneNumber()">CONTINUAR</button>
             </div>
         </div>
     </div>
