--- a/signUp/signUpStepSix.html
+++ b/signUp/signUpStepSix.html
@@ -50,22 +50,23 @@
             </div>
         </header>
         <div class="row" id="stepsContainer">
-            <h3 class="stepsTitle">Paso 4</h3>
-            <img src="../imageResources/info_details.svg" class="stepImage">
-            <h2 class="stepsSubTitle">Deseamos conocerle más</h2>
-            <input id="nit" type="text" class="validate" maxlength="17">
-            <label for="nit">Número de NIT</label>
-            <input id="dui" type="text" class="validate" maxlength="10">
-            <label for="dui">Número de DUI</label>
-            <h3 class="stepsSubTitle">Ingresos mensuales (USD)</h3>
-            <input id="income" type="text" class="validate" maxlength="8">
-            <label for="income">USD</label>
+            <h3 class="stepsTitle">¡Datos listos!</h3>
+            <img src="../imageResources/add_profile_photo.svg" id="profileImage" class="stepImage">
+            <p id="payLoanHeaders" class="stepsTitle"></p>
+            <p id="messageSentDialog" class="stepsDialogs">Haga click en el botón de continuar
+                para dirigirle a su perfil. </p>
+        </div>
+        <div class="row">
             <div class="row">
                 <button class="pure-material-button-contained" id="continue"
-                    onclick="saveDocuments()">CONTINUAR</button>
+                    onclick="location.href='../signIn/home.html'">CONTINUAR</button>
             </div>
         </div>
     </div>
+    <script>
+        document.getElementById("payLoanHeaders").innerHTML = "Le damos la bienvenida, " +
+            localStorage.getItem("name");
+            console.log(localStorage.getItem('profileImage'))
+        document.getElementById("profileImage").src = localStorage.getItem('profileImage');
+    </script>
 </body>
-
-</html>
