--- a/personalLoans/loanStepFour.html
+++ b/personalLoans/loanStepFour.html
@@ -9,8 +9,11 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <script type="text/javascript" src="../personalLoans/loanStepFour.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Prestamo personal</title>
 </head>
 
@@ -64,14 +67,10 @@
         </select>
 
         <h2 class="stepsSubTitle">¿Cuántas personas dependen de usted?</h2>
-        <select class="form-select" id="property">
-            <option selected>Seleccione uno</option>
-            <option value="once">Una vez al mes</option>
-            <option value="twice">Dos veces al mes</option>
-            <option value="weekly">una vez por semana</option>
-        </select>
+        <input id="amountOfPeople" type="text" class="validate" maxlength="30">
+        <label for="amountOfPeople">Cantidad</label>
         <button class="pure-material-button-contained" id="continue"
-            onclick="location.href='../personalLoans/loanStepFive.html'">CONTINUAR</button>
+            onclick="saveRemittances()">CONTINUAR</button>
     </div>
 </body>
 
