--- a/personalLoans/loanStepThree.html
+++ b/personalLoans/loanStepThree.html
@@ -9,8 +9,11 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <script type="text/javascript" src="../personalLoans/loanStepThree.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <title>Prestamo personal</title>
 </head>
 
@@ -59,7 +62,7 @@
         <label for="homePayment">USD</label>
 
         <button class="pure-material-button-contained" id="continue"
-            onclick="location.href='../personalLoans/loanStepFour.html'">CONTINUAR</button>
+            onclick="saveHome()">CONTINUAR</button>
     </div>
 </body>
 
