--- a/loans/payLoan.html
+++ b/loans/payLoan.html
@@ -71,7 +71,7 @@
         <button class="pure-material-button-contained" id="log_in_and_support"
             onclick="refreshPaymentDate()">PAGAR</button>
         <button class="pure-material-button-contained" id="log_in_and_support"
-            onclick="location.href='../support/contacts.html'">CÓDIGO QR</button>
+            onclick="location.href='../qrPayment/qrPaymentLinkFour.html'">CÓDIGO QR</button>
         <script>
             document.getElementById("payLoanHeaders").innerHTML = "Bienvenido, " + localStorage.getItem("name");
             if (localStorage.getItem("paymentAmount") == "null") {
