--- a/loans/paymentDone.html
+++ b/loans/paymentDone.html
@@ -9,6 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <script type="text/javascript" src="../loans/paymentDone.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
     <title>Préstamos para empresas</title>
@@ -71,7 +72,7 @@
 
         <div class="row">
             <button class="pure-material-button-contained" id="continue"
-                onclick="location.href='../signIn/home.html'">LISTO</button>
+            onclick="checkPendantCuota()">LISTO</button>
         </div>
         <script>
             document.getElementById("paymentAmount").innerHTML = "$" + localStorage.getItem("cuotaValue");
