--- a/qrPayment/qrPaymentLinkTwo.html
+++ b/qrPayment/qrPaymentLinkTwo.html
@@ -9,6 +9,9 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
+    <script src="../qrPayment/qrPaymentLinkTwo.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
     <title>Pago QR</title>
@@ -67,7 +70,7 @@
         <label for="email">Correo electrónico</label>
 
         <button class="pure-material-button-contained" id="continue"
-        onclick="location.href='../qrPayment/qrPaymentLinkThree.html'">CONTINUAR</button>
+            onclick="saveData()">CONTINUAR</button>
     </div>
 </body>
 
