--- a/signIn/home.html
+++ b/signIn/home.html
@@ -9,6 +9,7 @@
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <script type="text/javascript" src="../signIn/home.js"></script>
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
     <title>Perfil</title>
@@ -101,7 +102,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="card mb-3" id="homePaymentCard" onclick="location.href='../loans/payLoan.html'">
+                    <div class="card mb-3" id="homePaymentCard" onclick="checkPaymentInformation()">
                         <div class="row no-gutters">
                             <div class="col-md-4">
                                 <img src="../imageResources/ic_money.png" />
