✨ Add signIn functionality

--- a/promotions/credentialsLoans.html
+++ b/promotions/credentialsLoans.html
@@ -28,7 +28,7 @@
                         <a class="hamburger_options"
                             onclick="location.href='../promotions/promotions.html'">Promociones</a>
                         <a class="hamburger_options" onclick="location.href='../support/contacts.html'">Contactos</a>
-                        <a class="hamburger_options" onclick="location.href='../profile/profile.html'">Perfil</a>
+                        
                         <div class="row">
                             <button class="pure-material-button-contained" id="log_in_and_support"
                                 onclick="location.href='../signIn/signIn.html'">INICIAR
@@ -64,8 +64,7 @@
                             <div class="card-body">
                                 Hoteles en que aplica la promoción
                             </div>
-                            <button class="pure-material-button-contained" id="log_in_and_support"
-                                onclick="location.href=''">VER MÁS</button>
+                            <button class="pure-material-button-contained" id="log_in_and_support">VER MÁS</button>
                         </div>
                         <div class="colum">
                             <img class="card-img-top" src="../imageResources/hotelsPromotions.png" alt="Card image cap">
