--- a/qrPayment/qrPaymentLinkFour.html
+++ b/qrPayment/qrPaymentLinkFour.html
@@ -26,7 +26,7 @@
                         <a class="hamburger_options"
                             onclick="location.href='../promotions/promotions.html'">Promociones</a>
                         <a class="hamburger_options" onclick="location.href='../support/contacts.html'">Contactos</a>
-                        <a class="hamburger_options" onclick="location.href='../profile/profile.html'">Perfil</a>
+                        
                         <div class="row">
                             <button class="pure-material-button-contained" id="log_in_and_support"
                                 onclick="location.href='../signIn/signIn.html'">INICIAR
@@ -45,7 +45,7 @@
             </div>
         </header>
         <h3 class="stepsTitle" id="payLoanHeaders">Código QR</h3>
-        <img src="../imageResources/qrPayment.png" class="stepImage">
+        <img src="../imageResources/qrPayment.png" class="stepImage" id="">
         <p class="normal_text" id="payLoanHeaders">
             Escanee el código QR o
             descargue la imagen.
