--- a/signIn/signIn.html
+++ b/signIn/signIn.html
@@ -8,10 +8,12 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
     <link rel="stylesheet" href="../hamburger/hamburgerStyle.css">
     <link rel="stylesheet" href="../common style/style.css">
-    <title>Contactanos</title>
+    <script type="text/javascript" src="../hamburger/hamburgerJs.js"></script>
+    <script type="text/javascript" src="../signIn/signIn.js"></script>
+    <title>Inicio de sessión</title>
 </head>
 
 <body>
@@ -47,36 +49,13 @@
             </div>
         </header>
         <div class="row">
-            <h2 class="stepsSubTitle">Solicitar llamada</h2>
-            <h2 class="stepsSubTitle" id="contacts_header">Motivo de su consulta</h2>
-            <select class="form-select" id="selectIssueForm">
-                <option selected>Seleccione el motivo de su consulta</option>
-                <option value="notValid">Prestamo no valido</option>
-                <option value="lateFee">Cuota Atrasada</option>
-                <option value="noAbleToRegister">Error al registrarse</option>
-            </select>
-
-            <h2 class="stepsSubTitle" id="contacts_header">Seleccione una hora para su llamada</h2>
-            <select class="form-select" id="selectIssueForm">
-                <option selected>Seleccione una hora para su llamada</option>
-                <option value="seven">7 am</option>
-                <option value="eight">8 am</option>
-                <option value="nine">9 am</option>
-                <option value="ten">10 am</option>
-                <option value="eleven">11 am</option>
-                <option value="twelve">12 pm</option>
-                <option value="one">1 pm</option>
-                <option value="two">2 pm</option>
-                <option value="three">3 pm</option>
-                <option value="four">4 pm</option>
-                <option value="five">5 pm</option>
-                <option value="six">6 pm</option>
-            </select>
-
-            <div class="row">
-                <button class="pure-material-button-contained" id="continue"
-                    onclick="location.href='callConfirmation.html'">CONTINUAR</button>
-            </div>
+            <input id="mail" type="text" class="validate" maxlength="30">
+            <label for="mail">Correo electrónico</label>
+            <input id="password" type="password" class="validate" maxlength="8">
+            <label for="password">Contraseña</label>
+            <button class="pure-material-button-contained" id="continue" onclick="signIn()">Iniciar Sessión</button>
+            <button class="pure-material-button-contained" id="continue"
+                onclick="location.href='../signUp/signUpStepOne.html'">Crear cuenta</button>
         </div>
     </div>
 </body>
